# Olympus

./: .gitignore  ATG installation dependencies w docker.xlsx  Docker Notes.docx  README.md
atg_gui/: package.xml
atg_gui/src/: atg_window.cpp  (+1 more)
atg_gui_module/: CMakeLists.txt  LICENSE  ReadMe.md
atg_gui_module/include/atg_gui/: atg_window.hpp  converter.hpp  qnode.hpp
atg_gui_module/resources/: images.qrc
atg_gui_module/script/: check_req_folders.py  create_joints_param_yaml.py  get_ur_joints.py  poisson.mlx
atg_gui_module/src/: atg_window.cpp  converter.cpp  main.cpp
atg_gui_module/ui/: atg_window.ui  atg_window.ui.autosave
atg_pre_process_module/: CMakeLists.txt  README.md  package.xml
atg_pre_process_module/include/atg_surface_identification/: atg_surface_identification.hpp  converter.hpp
atg_pre_process_module/scripts/: remove_files.py
atg_pre_process_module/src/: atg_surface_identification.cpp  bounding_box.cpp  converter.cpp  region_growing_segmentation.cpp
atg_robot_motion_module/: README.md
atg_robot_motion_module/UR/ur10e/atg_ur10e_support/: CMakeLists.txt  package.xml
atg_robot_motion_module/UR/ur10e/atg_ur10e_support/launch/: ur10e_setup.launch  ur10e_sim.launch
atg_robot_motion_module/UR/ur10e/atg_ur10e_support/urdf/: ur10e_workspace.xacro
atg_robot_motion_module/UR/ur5e/atg_ur5e_descartes/: CMakeLists.txt  atg_ur5e_descartes_plugins.xml  package.xml
atg_robot_motion_module/UR/ur5e/atg_ur5e_descartes/include/atg_ur5e_descartes/: ikfast.h  ur5e_robot_model.h  ur_kin.h  ur_moveit_plugin.h
atg_robot_motion_module/UR/ur5e/atg_ur5e_descartes/src/: plugin_init.cpp  ur5e_robot_model.cpp  ur_kin.cpp  ur_moveit_plugin.cpp
atg_robot_motion_module/UR/ur5e/atg_ur5e_support/: CMakeLists.txt  package.xml
atg_robot_motion_module/UR/ur5e/atg_ur5e_support/launch/: ur5e_setup.launch  ur5e_sim.launch
atg_robot_motion_module/UR/ur5e/atg_ur5e_support/urdf/: ur5e_workspace.xacro
atg_robot_motion_module/abb/abb_irb1200/abb_irb1200_7_70_descartes/: CMakeLists.txt  abb_irb1200_7_70_descartes_plugins.xml  package.xml
atg_robot_motion_module/abb/abb_irb1200/abb_irb1200_7_70_descartes/include/abb_irb1200_7_70_descartes/: abb_irb1200_7_70_robot_model.h
atg_robot_motion_module/abb/abb_irb1200/abb_irb1200_7_70_descartes/src/: abb_irb1200_7_70_robot_model.cpp
atg_robot_motion_module/abb/abb_irb1200/abb_irb1200_7_70_ikfast_manipulator_plugin/: CMakeLists.txt  abb_irb1200_7_70_manipulator_moveit_ikfast_plugin_description.xml  package.xml  update_ikfast_plugin.sh
atg_robot_motion_module/abb/abb_irb1200/abb_irb1200_7_70_ikfast_manipulator_plugin/include/abb_irb1200_7_70_ikfast_manipulator_plugin/: abb_irb1200_7_70_manipulator_ikfast_moveit_plugin.hpp  abb_irb1200_7_70_manipulator_ikfast_solver.hpp  ikfast.h
atg_robot_motion_module/abb/abb_irb1200/abb_irb1200_7_70_ikfast_manipulator_plugin/src/: plugin_init.cpp
atg_robot_motion_module/abb/abb_irb2400/irb2400_ikfast_manipulator_plugin/: package.xml
atg_robot_motion_module/abb/abb_irb2400/irb2400_ikfast_manipulator_plugin/include/irb2400_ikfast_manipulator_plugin/: abb_irb2400_manipulator_ikfast_solver.hpp  ikfast.h
atg_robot_motion_module/abb/abb_irb2600/irb2600_12_165_ikfast_manipulator_plugin/: CMakeLists.txt  irb2600_12_165_manipulator_moveit_ikfast_plugin_description.xml  package.xml  update_ikfast_plugin.sh
atg_robot_motion_module/abb/abb_irb2600/irb2600_12_165_ikfast_manipulator_plugin/include/irb2600_12_165_ikfast_manipulator_plugin/: ikfast.h  irb2600_12_165_manipulator_ikfast_moveit_plugin.hpp  irb2600_12_165_manipulator_ikfast_solver.hpp
atg_robot_motion_module/abb/abb_irb2600/irb2600_12_165_ikfast_manipulator_plugin/src/: plugin_init.cpp
atg_robot_motion_module/robot_motion/: CMakeLists.txt  package.xml
atg_robot_motion_module/robot_motion/include/robot_motion/: robot_motion.h
atg_robot_motion_module/robot_motion/launch/: masking_setup_demo.launch  masking_sim_demo.launch  send_urscript.launch
atg_robot_motion_module/robot_motion/sh/: abb_rapid_send.sh  urscript_send.sh
atg_robot_motion_module/robot_motion/src/: generate_rapid_script.cpp  generate_trajectory.cpp  generate_urscript.cpp  init_descartes.cpp  init_ros.cpp  load_parameters.cpp  move_home.cpp  plan_path.cpp  read_robot_state.cpp  robot_motion.cpp  robot_motion_main.cpp  run_path.cpp  send_script.cpp
atg_robot_motion_module/tool_model/: CMakeLists.txt  package.xml
atg_robot_motion_module/tool_model/config/: env_params.yaml  obj_frame.yaml  tcp_params.yaml
atg_robot_motion_module/tool_model/meshes/: ATI_9105_Adapter_plate.stl  ATI_Tool_Spindle_Set.stl  EE3DOF (original_sampled).ply  EE3DOF.ply  EcoPen450_300ml_ASM.stl  Fabric_Pen.stl  OLY_EOAT_Assembly.stl  Toolholder_Pen (copy).stl  Toolholder_Pen.stl  flip_mesh_normal.mlx  masking_eco_pen3.ply  pclmini.ply  poisson.mlx
atg_robot_motion_module/tool_model/meshes/STL/: ATI-9105-TIF-DELTA-IP65.stl  Brushless Motor Spindle.stl  Customblock_1.stl  Customblock_2.stl
atg_robot_motion_module/tool_model/sh/: .ur5e_robot_setup.sh.swp  irb1200_robot_setup.sh  irb1200_sim.sh  irb2400_robot_setup.sh  irb2400_sim.sh  irb2600_robot_setup.sh  irb2600_sim.sh  ur10_robot_setup.sh  ur10_robot_sim.sh  ur10e_robot_setup.sh  ur10e_sim.sh  ur5e_robot_setup.sh  ur5e_sim.sh
atg_robot_motion_module/tool_model/urdf/: ATI_w_Spindle.xacro  EE3DOF.xacro  EcoPen450_Pen_Tool (copy 1).xacro  EcoPen450_Pen_Tool.xacro  EcoPen450_Pen_Tool_old.xacro  Fabric_Pen_Tool.xacro  NDT_Tool.xacro  OLYMPUS.xacro  Sandblasting_Nozzle.xacro  blank_env.xacro  blank_tool.xacro  coupon.xacro  masking_table.xacro  masking_table_old.xacro  round_table(r06).xacro  tcp_origin_viz.xacro
atg_toolpath_generation_module/: CMakeLists.txt  README.md  package.xml
atg_toolpath_generation_module/include/atg_toolpath_generation/: atg_toolpath_generation.hpp
atg_toolpath_generation_module/scripts/: Tool_Path_Generation_Contours.py  Tool_Path_Generation_Zigzag.py  pcd2txt.py
atg_toolpath_generation_module/src/: atg_toolpath_contour.cpp  atg_toolpath_generation.cpp  atg_toolpath_point.cpp  atg_toolpath_zigzag.cpp
(+254 files in other folders)
