<?xml version="1.0"?>
<package>
  <name>atg_toolpath_generation</name>
  <version>0.1.0</version>
  <description>

     atg_toolpath_generation

  </description>

  <maintainer email="josh_chen@artc.a-star.edu.sg">JoshC</maintainer>
  <author>JoshC</author>
  <license>
  Copyright (c) 2021 Advanced Robotic Applications
  Advanced Remanufacturing and Technology Centre
  A*STAR Research Entities (Co. Registration No. 199702110H)
  </license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>qt_build</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>libqt4-dev</build_depend>
  <run_depend>qt_build</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>libqt4-dev</run_depend>


</package>
