<?xml version="1.0"?>
<package format="2">
  <name>atg_robot_motion</name>
  <version>0.0.0</version>
  <description>The robot motion package</description>
  <maintainer email="josh_chen@artc.a-star.edu.sg">Joshc</maintainer>
  <author>Joshc</author>
  <license>
  Copyright (c) 2021 Advanced Robotic Applications
  Advanced Remanufacturing and Technology Centre
  A*STAR Research Entities (Co. Registration No. 199702110H)
  </license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>descartes_core</depend>
  <depend>descartes_planner</depend>
  <depend>descartes_moveit</depend>
  <depend>descartes_utilities</depend>
  <depend>moveit_msgs</depend>
  <depend>moveit_ros_planning_interface</depend>
  <depend>atg_ur10_descartes</depend>
  <depend>atg_ur10e_descartes</depend>
  <depend>atg_ur5e_descartes</depend>
  <depend>abb_irb2400_descartes</depend>
  <depend>abb_irb2400_12_165_descartes</depend>
  <depend>abb_irb1200_7_70_descartes</depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
