<?xml version="1.0"?>
<package format="2">
  <name>tool_model</name>
  <version>0.0.0</version>
  <description>package to place tool models</description>
  <maintainer email="josh_chen@artc.a-star.edu.sg">JoshC</maintainer>
  <author>JoshC</author>
  <license>
  Copyright (c) 2021 Advanced Robotic Applications
  Advanced Remanufacturing and Technology Centre
  A*STAR Research Entities (Co. Registration No. 199702110H)
  </license>

  <buildtool_depend>catkin</buildtool_depend>
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
