<?xml version="1.0"?>
<package format="2">
  <name>abb_irb1200_7_70_descartes</name>
  <version>0.1.0</version>
  <description>
    Defines a Descartes RobotModel plugin using the abb_irb1200_7_70_ikfast_manipulator_plugin
    for kinematics. 
  </description>

  <maintainer email="josh_chen@artc.a-star.edu.sg">JoshC</maintainer>
  <author>JoshC</author>
  <license>
  Copyright (c) 2021 Advanced Robotic Applications
  Advanced Remanufacturing and Technology Centre
  A*STAR Research Entities (Co. Registration No. 199702110H)
  </license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>descartes_core</depend>
  <depend>descartes_moveit</depend>
  <depend>abb_irb1200_7_70_ikfast_manipulator_plugin</depend>
  <depend>pluginlib</depend>

  <export>
    <descartes_core plugin="${prefix}/abb_irb1200_7_70_descartes_plugins.xml"/>
  </export>

</package>
