<?xml version='1.0' encoding='UTF-8'?>
<package format="2">
  <name>abb_irb1200_7_70_ikfast_manipulator_plugin</name>
  <version>0.0.0</version>
  <description>The abb_irb1200_7_70_ikfast_manipulator_plugin package</description>

  <maintainer email="josh_chen@artc.a-star.edu.sg">JoshC</maintainer>
  <author>JoshC</author>
  <license>
  Copyright (c) 2021 Advanced Robotic Applications
  Advanced Remanufacturing and Technology Centre
  A*STAR Research Entities (Co. Registration No. 199702110H)
  </license>

  <buildtool_depend>catkin</buildtool_depend>

  <export>
    <moveit_core plugin="${prefix}/abb_irb1200_7_70_manipulator_moveit_ikfast_plugin_description.xml"/>
  </export>
  <build_depend>moveit_core</build_depend>
  <build_depend>liblapack-dev</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>tf_conversions</build_depend>
  <build_depend>pluginlib</build_depend>
  <exec_depend>moveit_core</exec_depend>
  <exec_depend>liblapack-dev</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>tf_conversions</exec_depend>
  <exec_depend>pluginlib</exec_depend>
</package>
