<?xml version='1.0' encoding='ASCII'?>
<package format="2">
  <name>irb2400_ikfast_manipulator_plugin</name>
  <version>0.1.0</version>
  <description>
    IKFast plugin for the ABB2400; used for closed form IK in Godel
  </description>
  
  <maintainer email="josh_chen@artc.a-star.edu.sg">JoshC</maintainer>
  <author>JoshC</author>
  <license>
  Copyright (c) 2021 Advanced Robotic Applications
  Advanced Remanufacturing and Technology Centre
  A*STAR Research Entities (Co. Registration No. 199702110H)
  </license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>liblapack-dev</depend>
  <depend>moveit_core</depend>
  <depend>pluginlib</depend>
  <depend>roscpp</depend>
  <depend>tf_conversions</depend>
  
  <export>
    <moveit_core plugin="${prefix}/abb_irb2400_manipulator_moveit_ikfast_plugin_description.xml"/>
  </export>

</package>
