<?xml version='1.0' encoding='UTF-8'?><!--?xml version='1.0' encoding='UTF-8'?-->
<package format="2">
  <name>irb2600_12_165_ikfast_manipulator_plugin</name>
  <version>0.0.0</version>
  <description>The irb2600_12_165_ikfast_manipulator_plugin package</description>

  <maintainer email="josh_chen@artc.a-star.edu.sg">JoshC</maintainer>
  <author>JoshC</author>
  <license>
  Copyright (c) 2021 Advanced Robotic Applications
  Advanced Remanufacturing and Technology Centre
  A*STAR Research Entities (Co. Registration No. 199702110H)
  </license>

  <buildtool_depend>catkin</buildtool_depend>

  <export>
    <!-- Other tools can request additional information be placed here -->
    <moveit_core plugin="${prefix}/irb2600_12_165_manipulator_moveit_ikfast_plugin_description.xml"/>
  </export>

  <!--build_depend>moveit_core</build_depend>
  <build_depend>liblapack-dev</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>tf_conversions</build_depend>
  <build_depend>pluginlib</build_depend>
  <exec_depend>moveit_core</exec_depend>
  <exec_depend>liblapack-dev</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>tf_conversions</exec_depend>
  <exec_depend>pluginlib</exec_depend-->
  <depend>liblapack-dev</depend>
  <depend>moveit_core</depend>
  <depend>pluginlib</depend>
  <depend>roscpp</depend>
  <depend>tf_conversions</depend>
  <depend>irb2400_ikfast_manipulator_plugin</depend>
</package>
